fix: prevent overflow and add ability to scroll text in story card

--- a/src/components/Stories/components/StoriesLayout/StoriesLayout.scss
+++ b/src/components/Stories/components/StoriesLayout/StoriesLayout.scss
@@ -88,6 +88,7 @@ $textBlockMargin: 16px;
         justify-content: center;
         flex-direction: column;
         margin-bottom: $smallMargin;
+        overflow: hidden;
     }
 
     &__text-header {
@@ -98,6 +99,7 @@ $textBlockMargin: 16px;
     &__text-content {
         @include mixins.text-body-2();
         color: var(--g-color-text-complementary);
+        overflow-y: scroll;
 
         #{$block}__text-header + & {
             margin-top: $textBlockMargin;
